--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.1"
   },
   "scripts": {
+    "test": "cd backend && npm install && mocha"
   },
   "eslintConfig": {
     "extends": "react-app"
