--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "scripts": {
     "test": "cd backend && npm install && mocha",
-    "frontend": "cd frontend & npm run start",
-    "backend": "cd backend & npm run start",
+    "frontend": "cd frontend & npm start",
+    "backend": "cd backend & node app.js",
     "start": "npm run backend",
     "heroku-postbuild": "cd backend && npm i --only=prod && cd ../frontend && npm i && npm i --only=dev --no-shrinkwrap && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/ENSE-701-Team-5/SEER/issues"
+  },
+  "homepage": "https://github.com/ENSE-701-Team-5/SEER#readme"
 }
