--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "frontend": "npm run start --prefix frontend",
     "backend": "npm run start --prefix backend",
     "start" : "npm run backend",
-    "heroku-postbuild":  "npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild":  "cd backend && npm i --only=prod && cd ../frontend && npm i && npm i --only=dev --no-shrinkwrap && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
