--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "mocha": "^8.1.1"
   },
   "scripts": {
-    "test": "cd backend && npm install && mocha"
+    "test": "cd backend && npm install && mocha",
+    "frontend": "npm run start --prefix frontend",
+    "backend": "npm run start --prefix backend",
+    "start" : "npm run backend",
+    "heroku-postbuild":  "cd backend && npm i --only=prod && cd ../frontend && npm i && npm i --only=dev --no-shrinkwrap && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
