--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/ENSE-701-Team-5/SEER",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.10.2"
   },
   "devDependencies": {
     "request": "^2.88.2"
