--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/ENSE-701-Team-5/SEER",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.2"
   },
   "devDependencies": {
     "request": "^2.88.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
