--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "dependencies": {
     "chai": "^4.2.0",
-    "env": "0.0.2",
+    "dotenv": "^8.2.0",
     "mocha": "^8.1.1"
   },
   "scripts": {
