Add test and refactor code
Add unit testing and refactored the code. Decoupled the database from the application. So that seperate connections could be made from different users

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.2"
+    "mongoose": "^5.10.2",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "request": "^2.88.2"
