--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,5 +32,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ense-seer.herokuapp.com/"
+  "homepage": "https://ense-seer.herokuapp.com/",
+  "proxy":"http://localhost:5000"
 }
