--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ENSE-701-Team-5/SEER",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.2",
