--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
-    "mocha": "^8.1.1",
-    "react-google-login": "^5.1.21"
+    "mocha": "^8.1.1"
   },
   "scripts": {
     "test": "cd backend && npm install && mocha",
